# vvv17-demo-team-blue

./: CMakeLists.txt  Project_presentation.pptx  README.md  blue_card_demo.xml
cardTracker/: CMakeLists.txt  cardTracker.xml  setup.py
cardTracker/app/scripts/: cardTrackerTest.xml
cardTracker/cardTracker/: BaseModule.py  YarpFactory.py  card_tracker.py  patch.py  template.py  template_db.py
cardTracker/scripts/: cardTracker
duck-detector/: CMakeLists.txt  duck-detector.thrift  duck-detector.xml
duck-detector/app/scripts/: duck-detector.xml
duck-detector/src/: main.cpp
gaze-module/: CMakeLists.txt  blue_gaze_module.xml
gaze-module/app/scripts/: gazeControl-app-icub.xml  gazeControl-app-icubSim.xml  gazeControl-system.xml
gaze-module/src/: main.cpp
gazeControl/: CMakeLists.txt
gazeControl/app/scripts/: gazeControl-app-icub.xml  gazeControl-app-icubSim.xml  gazeControl-app.xml  gazeControl-system.xml
gazeControl/src/: main.cpp
mood-module/: CMakeLists.txt
mood-module/app/scripts/: blue_mood_module-app.xml  mood-module-app.xml  mood-module-sys-app.xml  tutorial_RFModule-app.xml
mood-module/src/: Codec.cpp  Codec.h  main.cpp  mood.cpp  mood.h
movement-control/: CMakeLists.txt  READ_ME  blue-movement-control.xml  push-sim-scenario.txt
movement-control/app/conf/: grasp_model_right.ini
movement-control/app/scripts/: blue_movement_module.xml
movement-control/src/: helpers.cpp  helpers.h  main.cpp  slidingController.thrift
slide-module/: CMakeLists.txt  blue_slide_module.xml
slide-module/app/conf/: grasp_model_left.ini
slide-module/app/scripts/: assignment_grasp-it-app-icub.xml  assignment_grasp-it-app-icubSim.xml  assignment_grasp-it-system.xml  blue-slide-module-app-icub.xml  blue-slide-module-app-icubSim.xml  blue-slide-module-system-simulation.xml  blue_slide_module.xml
slide-module/src/: Codec.cpp  Codec.h  helpers.cpp  main.cpp
state-machine/: CMakeLists.txt  blue_state_machine.xml  main.cpp
state-machine/src/: main.cpp
watchdog-module/: CMakeLists.txt
watchdog-module/app/scripts/: watchdog_module-app.xml
watchdog-module/src/: Codec.cpp  Codec.h  main.cpp
watchdog_module/: blue_watchdog_module.xml
